# OceanColor

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish-to-test-pypi.yml
OceanColor/: OceanColor.py  __init__.py  catalog.py  cli.py  cmr.py  gsfc.py  inrange.py  storage.py  utils.py
OceanColor/backend/: __init__.py  common.py
docs/: Makefile  alternatives.rst  api.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/notebooks/: chl_alongtrack.ipynb  chl_inrange.ipynb
tests/: __init__.py  test_OceanColor.py  test_cmr.py  test_gsfc.py  test_inrange.py  test_storage.py
