[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "milksnake",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
authors = [
  {email = "guilherme.castelao@scootscience.com"},
  {name = "Guilherme Castelao"}
]
