[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name="OceanColor"
dynamic = ['version']
description="Deal with NASA Ocean Color data (search and download)"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords=["NASA", "Ocean Color", "chlorophyll", "oceanography", "matchup"]
authors = [
  {email = "guilherme@castelao.net"},
  {name = "Guilherme Castelao"}
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "Click >= 8.0",
  "numpy >= 1.21",
  "netCDF4 >= 1.5.6",
  "pandas >= 1.3",
  "pyproj >= 3.0",
  "python-cmr ~= 0.9.0",
  "requests >= 2.27",
  "xarray >= 0.19",
  "fsspec >= 2022.1",
  "aiohttp >= 3.8.1",
]

[project.optional-dependencies]
dev = [
  "black~=23.9.0",
  "flake8~=4.0.1",
  "pyupgrade~=3.2.2",
  "pre-commit~=2.20.0",
  "sphinx_rtd_theme~=0.4.3"
]
parallel = ["loky >= 2.9"]
s3 = [
  "s3fs >= 2022.1",
  "zarr >= 2.10"
  ]
test = ["pytest", "pytest-cov>=3.0"]


[project.urls]
homepage = "https://github.com/castelao/OceanColor"
documentation = "https://oceancolor.readthedocs.io"
repository = "https://github.com/castelao/OceanColor"

[project.scripts]
"OceanColor" = "OceanColor.cli:main"

[tool.black]
line-length = 79

[tool.setuptools.packages.find]
include = ['OceanColor', 'OceanColor.*']
namespaces = false

[tool.setuptools_scm]
write_to = "OceanColor/version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"
